parser.c
/*------------------------------------------
 Title:  parser.c
 Author: Matěj Krátký,
 Login:  xkratk17, 
 Date:   23 Nov 2021;
------------------------------------------*/

#include "parser.h"
#include "codegen.c"
#include "codegen.h"
#include "symtable.c"
#include "stack.c"
#include "expression.c"

Token token;
BSTNodePtr *symtable;
BSTNodePtr *root_symtable;
// tokenStack tmp;
Token clipboard [16];
Token nameFunc [16];
Token callFunc;
int counter_func = -1;
int counter_if = -1;
int counter_while = -1;

int counter_type = 0;
int counter_retVal = 0;

int counter_param = 0;
int count_bracket = 0;
int returnCode;
char floatStart[21] = "0x";

Stack expressionStack;
    // Load next token, check the return code.

    /*********TABLE*************/

    int start()
{
    // rule <start> -> <preamble> <first_body>
    NEXT();
    CHECK_AND_CALL_FUNCTION(preamble());
    
    generate_header();
    stackInit(&expressionStack);
    // NEXT();
    CHECK_AND_CALL_FUNCTION(firstBody());

    smDispose(&root_symtable);
    return OK;
}

int preamble()
{
    // rule <preamble> -> require "ifj21"

    checkAndLoadKeyword(KEYWORD, "require");

    if (token.type != IFJ21)
        return 7;

    NEXT();

    return OK;
}

int firstBody()
{
    symtable = root_symtable;
    smInit(&symtable);
    switch (token.type)
    {
    case KEYWORD:
        // Rule: <first_body> -> <func> <body>
        if (strcmp(token.attribute, "function") == 0)
        {
            CHECK_AND_CALL_FUNCTION(func());

            CHECK_AND_CALL_FUNCTION(body());
            return OK;
            break;
        } // Rule: <first_body> -> <func_declr> <body>
        else if (strcmp(token.attribute, "global") == 0)
        {
            CHECK_AND_CALL_FUNCTION(funcDeclr());

            CHECK_AND_CALL_FUNCTION(body());
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case IDENTIFICATOR:
        // Rule: <first_body> -> <func_call> <body>
        CHECK_AND_CALL_FUNCTION(funcCall());

        CHECK_AND_CALL_FUNCTION(body());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int body()
{
    switch (token.type)
    {
    case KEYWORD:
        // Rule: <first_body> -> <func> <body>
        if (strcmp(token.attribute, "function") == 0)
        {
            CHECK_AND_CALL_FUNCTION(func());

            CHECK_AND_CALL_FUNCTION(body());
            return OK;
            break;
        } // Rule: <first_body> -> <func_declr> <body>
        else if (strcmp(token.attribute, "global") == 0)
        {
            CHECK_AND_CALL_FUNCTION(funcDeclr());

            CHECK_AND_CALL_FUNCTION(body());
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case IDENTIFICATOR:
        // Rule: <first_body> -> <func_call> <body>
        CHECK_AND_CALL_FUNCTION(funcCall());

        CHECK_AND_CALL_FUNCTION(body());
        return OK;
        break;
    case ENDOFFILE:
        // printf();
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int func()
{
    // Rule: <func> -> function id ( <params> ) <func_types>
    checkInsertAndLoadToken(KEYWORD, "function");
    counter_func++;
    nameFunc[counter_func] = token;
    smInsertFunctin(&symtable, token.attribute, NO, NULL, NO, 0, 0); // symtable added name_func
    root_symtable = symtable;
    generate_func_top(token.attribute);
    CHECK_AND_CALL_FUNCTION(chek_name(token.attribute));
    checkAndLoadToken(IDENTIFICATOR);
    checkAndLoadToken(LBR);
    CHECK_AND_CALL_FUNCTION(params());
    checkAndLoadToken(RBR);
    count_bracket = 2;
    CHECK_AND_CALL_FUNCTION(funcTypes());
    // generate_func_bottom(token);
    counter_type = 0;
    return OK;
}

int funcDeclr()
{
    // Rule: <func_declr>  ->  global id : function ( <params> ) : <types>
    checkInsertAndLoadToken(KEYWORD, "global");
    checkAndLoadToken(IDENTIFICATOR);
    checkAndLoadToken(COLON);
    checkAndLoadKeyword(KEYWORD, "function");
    checkAndLoadToken(LBR);
    CHECK_AND_CALL_FUNCTION(params());
    checkAndLoadToken(RBR);
    checkAndLoadToken(COLON);
    CHECK_AND_CALL_FUNCTION(types());

    return OK;
}

int funcCall()
{
    // Rule: <func_call> -> id ( <params> )
    checkAndLoadToken(IDENTIFICATOR);
    checkAndLoadToken(LBR);
    CHECK_AND_CALL_FUNCTION(params());
    checkAndLoadToken(RBR);

    return OK;
}

int params()
{
    switch (token.type)
    {
    case RBR:
        return OK;
        break;
    case IDENTIFICATOR:
        // Rule: <first_body> -> <func_call> <body>
        // counter_param++;
        // generate_func_param(token.attribute, counter_param);
        CHECK_AND_CALL_FUNCTION(param());
        CHECK_AND_CALL_FUNCTION(paramsN());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int funcTypes()
{
    switch (token.type)
    {
    case COLON: // Rule: <func_types> -> : <types> <state_list> end
        checkAndLoadToken(COLON);
        CHECK_AND_CALL_FUNCTION(typesT11());
        CHECK_AND_CALL_FUNCTION(stateList());
        CHECK_AND_CALL_FUNCTION(stateList()); //++++++POSSIBLE ERROR++++
        symtable = root_symtable;
        checkAndLoadKeyword(KEYWORD, "end"); ///fixed after return +++++++++
        return OK;
        break;
    case IDENTIFICATOR: // Rule: <func_types> ->  <state_list> end
        CHECK_AND_CALL_FUNCTION(stateList());
        checkAndLoadKeyword(KEYWORD, "end");
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "end") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "local") == 0 
        || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "while") == 0)
        {
            CHECK_AND_CALL_FUNCTION(stateList());
            checkAndLoadKeyword(KEYWORD, "end");
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case EOL:
        NEXT();
        return OK; ////skip


    default : return SYNTAX_ERROR;
        break;
    }
}

int types()
{
    switch (token.type)
    {
    // Rule: <types> ->  eps
    case ENDOFFILE:
        return OK;
        break;
    case IDENTIFICATOR:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "function") == 0 || strcmp(token.attribute, "global") == 0)
        {
            return OK;
            break;
        } // Rule: <types> ->  <data_type>
        else if (strcmp(token.attribute, "integer") == 0 || strcmp(token.attribute, "nil") == 0 || strcmp(token.attribute, "string") == 0 || strcmp(token.attribute, "number") == 0)
        {
            CHECK_AND_CALL_FUNCTION(dataType());
            CHECK_AND_CALL_FUNCTION(typesN());
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}
int typesT11()
{
    switch (token.type)
    {
    // Rule: <types> ->  eps
    case IDENTIFICATOR:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "end") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "while") == 0)
        {
            return OK;
            break;
        } // Rule: <types> ->  <data_type>
        else if (strcmp(token.attribute, "integer") == 0 || strcmp(token.attribute, "nil") == 0 || strcmp(token.attribute, "string") == 0 || strcmp(token.attribute, "number") == 0)
        {
            CHECK_AND_CALL_FUNCTION(dataType());
            CHECK_AND_CALL_FUNCTION(typesNT17());
            for (int i=0; symtable->type[i] != NO; i++)
            {
                generate_return_values(symtable->type[i], i);
            }
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}
int typesT20()
{
    switch (token.type)
    {
    // Rule: <types> ->  eps
    case IDENTIFICATOR:
        return OK;
        break;
    case ASSIGN:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "end") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "while") == 0)
        {
            return OK;
            break;
        } // Rule: <types> ->  <data_type>
        else if (strcmp(token.attribute, "integer") == 0 || strcmp(token.attribute, "nil") == 0 || strcmp(token.attribute, "string") == 0 || strcmp(token.attribute, "number") == 0)
        {
            CHECK_AND_CALL_FUNCTION(dataType());
            if (strcmp(token.attribute, "=") != 0)
            {
                generate_declaration(char_type(symtable->scope), symtable->name);
            }
            CHECK_AND_CALL_FUNCTION(typesNT30());
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}
int typesT43()
{
    switch (token.type)
    {
    // Rule: <types> ->  eps
    case ASSIGN:
        return OK;
        break;
    case IDENTIFICATOR:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "else") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "while") == 0)
        {
            return OK;
            break;
        } // Rule: <types> ->  <data_type>
        else if (strcmp(token.attribute, "integer") == 0 || strcmp(token.attribute, "nil") == 0 || strcmp(token.attribute, "string") == 0 || strcmp(token.attribute, "number") == 0)
        {
            CHECK_AND_CALL_FUNCTION(dataType());
            CHECK_AND_CALL_FUNCTION(typesNT50());
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int param()
{ // Rule:<param>     ->  id : <data_type>

    counter_param++; ///for cod gen
    smInsertFunctin(&symtable, nameFunc[counter_func].attribute, NO, token.attribute, NO, counter_param-1, 0);
    generate_func_param(token.attribute, counter_param); /// for cod gen

    checkAndLoadToken(IDENTIFICATOR);
    checkAndLoadToken(COLON);
    CHECK_AND_CALL_FUNCTION(dataType());
    // generate_func_param(); ///need symtable_func Parametr
    return OK;
}

int paramsN()
{
    switch (token.type)
    {
    // Rule: <params_n> ->  eps
    case RBR:
        counter_param = 0;
        return OK;
        break;
    case COMMA: // Rule: <params_n> ->  , <data_type> <types_n>
        checkAndLoadToken(COMMA);
        CHECK_AND_CALL_FUNCTION(param());
        CHECK_AND_CALL_FUNCTION(paramsN());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int stateList()
{
    switch (token.type)
    {
    // Rule:<state_list> ->  <state> <state_list>
    case IDENTIFICATOR:
        CHECK_AND_CALL_FUNCTION(state());
        CHECK_AND_CALL_FUNCTION(stateList());
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "while") == 0)
        {
            // stackInit(&tmp);
            CHECK_AND_CALL_FUNCTION(state());
            // NEXT();///added
            // token = getToken();
            CHECK_AND_CALL_FUNCTION(stateList());
            return OK;
            break;
        } // Rule: <state_list>->eps
        else if (strcmp(token.attribute, "end") == 0)
        {
            symtable = root_symtable;
            if (symtable->name != NULL)
            {
                if ((symtable->name[0] == 'i' && symtable->name[1] == 'f') || (symtable->name[0] == 'w' && symtable->name[1] == 'h' && symtable->name[2] == 'i' && symtable->name[3] == 'l'))
                    return OK;
            }
            generate_func_bottom(symtable->name); ///FIX MY 

            // smDeleteFunction(&symtable);
            // smDeleteFunction(&root_symtable);
            // stackClear(&tmp);
            // stackFree(&tmp);
            return OK;

            break;
        } // Rule: <state_list>->return <return>
        else if (strcmp(token.attribute, "return") == 0)
        {
            checkAndLoadKeyword(KEYWORD, "return");
            symtable = root_symtable;
            smAddRetVal(&symtable, token.attribute, counter_retVal++);           //FIX MY create var_couter return variabls
            CHECK_AND_CALL_FUNCTION(returnState());
            for (int i=0; symtable->retVal[i].name != NULL; i++)
            {
                char a[10];
                sprintf(a, "%%retval%d", i);
                // generate_declaration("LF@", a);
                generate_move("LF@", a, "LF@", symtable->retVal[i].name); //FIX MY create scope
                // counter_retVal++;
            }

            generate_func_bottom(symtable->name);

            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int stateListT24()
{
    switch (token.type)
    {
    // Rule:<state_list> ->  <state> <state_list>
    case IDENTIFICATOR:
        CHECK_AND_CALL_FUNCTION(stateT35());
        CHECK_AND_CALL_FUNCTION(stateListT24());
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "while") == 0)
        {
            CHECK_AND_CALL_FUNCTION(stateT35());
            CHECK_AND_CALL_FUNCTION(stateListT24());
            return OK;
            break;
        } // Rule: <state_list>->eps
        else if (strcmp(token.attribute, "else") == 0)
        {
            return OK;
            break;
        } // Rule: <state_list>->return <return>
        else if (strcmp(token.attribute, "return") == 0)
        {
            checkAndLoadKeyword(KEYWORD, "return");    
            symtable = root_symtable;
            smAddRetVal(&symtable, token.attribute, 0);
            CHECK_AND_CALL_FUNCTION(returnStateT36()); //FIX MY++++++++++
            for (int i = 0; symtable->retVal[i].name != NULL; i++)
            {
                char a[10];
                sprintf(a, "%%retval%d", i);
                // generate_declaration("LF@", a);
                generate_move("LF@", a, "LF@", symtable->retVal[i].name); // FIX MY create scope
            }
            generate_func_bottom(symtable->name);
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int dataType()
{ /* Rule: <data_type> ->  integer
<data_type> ->  string
<data_type> ->  nil
<data_type> ->  number
*/
    switch (token.type)
    {
    case KEYWORD:
        if (strcmp(token.attribute, "integer") == 0)
        {
            decType();
            checkAndLoadKeyword(KEYWORD, "integer");
            return OK;
            break;
        }
        else if (strcmp(token.attribute, "string") == 0)
        {
            decType();
            checkAndLoadKeyword(KEYWORD, "string");
            return OK;
            break;
        }
        else if (strcmp(token.attribute, "nil") == 0)
        {
            checkAndLoadKeyword(KEYWORD, "nil");
            return OK;
            break;
        }
        else if (strcmp(token.attribute, "number") == 0)
        {
            decType();
            checkAndLoadKeyword(KEYWORD, "number");
            return OK;
            break;
        }
        return SYNTAX_ERROR;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int decType()
{
    if (symtable->isFunction != true)
    {
        symtable = smSearchNode(symtable, clipboard[1].attribute);
        // typeVar a = change_type(token.attribute);
        smInsertVariable(&symtable, clipboard[1].attribute, NULL, change_type(token.attribute), change_type(clipboard[0].attribute));
    }
    else if (symtable->isFunction == true)
    {
        if (count_bracket == 2)
        {
            smInsertFunctin(&symtable, nameFunc[counter_func].attribute, change_type(token.attribute), symtable->param[0].name, symtable->param[0].type, -1, counter_type++); // FIX MY
        }
        else
            smInsertFunctin(&symtable, nameFunc[counter_func].attribute, NO, symtable->param[counter_param - 1].name, change_type(token.attribute), counter_param - 1, 0);
    }
}

int typesN()
{
    switch (token.type)
    {
        // Rule: <types_n>   ->  eps
    case IDENTIFICATOR:
        return OK;
        break;
    case ENDOFFILE:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "function") == 0 || strcmp(token.attribute, "global") == 0)
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case COMMA: // Rule: <types_n> ->  , <data_type> <types_n>
        checkAndLoadToken(COMMA);
        CHECK_AND_CALL_FUNCTION(dataType());
        CHECK_AND_CALL_FUNCTION(typesN());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int typesNT17()
{
    switch (token.type)
    {
        // Rule: <types_n>   ->  eps
    case IDENTIFICATOR:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "while") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "end") == 0)
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case COMMA: // Rule: <types_n> ->  , <data_type> <types_n>
        checkAndLoadToken(COMMA);
        CHECK_AND_CALL_FUNCTION(dataType());
        CHECK_AND_CALL_FUNCTION(typesNT17());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}
int typesNT30()
{
    switch (token.type)
    {
        // Rule: <types_n>   ->  eps
    case IDENTIFICATOR:
        return OK;
        break;
    case ASSIGN:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "while") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "end") == 0)
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case COMMA: // Rule: <types_n> ->  , <data_type> <types_n>
        checkAndLoadToken(COMMA);
        CHECK_AND_CALL_FUNCTION(dataType());
        CHECK_AND_CALL_FUNCTION(typesNT30());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}
int typesNT50()
{
    switch (token.type)
    {
        // Rule: <types_n>   ->  eps
    case IDENTIFICATOR:
        return OK;
        break;
    case ASSIGN:
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "while") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "else") == 0)
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case COMMA: // Rule: <types_n> ->  , <data_type> <types_n>
        checkAndLoadToken(COMMA);
        CHECK_AND_CALL_FUNCTION(dataType());
        CHECK_AND_CALL_FUNCTION(typesNT50());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}
int state()
{
    switch (token.type)
    {
    case IDENTIFICATOR: // Rule: <state> ->  id <after_id>
        // call func or приправнивание переменной
        clipboard[0] = token;
        checkAndLoadToken(IDENTIFICATOR);
        CHECK_AND_CALL_FUNCTION(afterID());
        expressionStack = stackReverse(&expressionStack);
        if (strcmp(clipboard[0].attribute, "write") == 0)
        {
            for (int i=0; expressionStack.head.attribute != NULL; i++)
            {
                generate_write("LF@", expressionStack.head.attribute);
                stackPop(&expressionStack);
            }
        }
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "local") == 0) // Rule: <state>  ->  local id : <types> <is_assign>
        {
            clipboard[0] = token;
            checkAndLoadKeyword(KEYWORD, "local");
            CHECK_AND_CALL_FUNCTION(chek_name(token.attribute));
            clipboard[1] = token; ///added stack name var token
            CHECK_AND_CALL_FUNCTION(check_dec(token.attribute, 0));
            //
            smInsertVariable(&symtable, clipboard[1].attribute, NULL, NO, change_type(clipboard[0].attribute)); /// added symtable name var
            symtable = smSearchNode(symtable, clipboard[1].attribute);

            // generate_declaration("LF@", token.attribute); /// added codegen
            checkAndLoadToken(IDENTIFICATOR);
            checkAndLoadToken(COLON);
            CHECK_AND_CALL_FUNCTION(typesT20()); //symtable *** добавить в симтейбл енам и добавить тип данных
            CHECK_AND_CALL_FUNCTION(isAssign()); //=
            return OK;
            break;
        }
        else if (strcmp(token.attribute, "if") == 0) // Rule: <state> ->  if <expression> then <state_list> <after_if>
        {
            symtable = root_symtable;
            counter_if++;
            char name_if[6];
            sprintf(name_if,"if%i", counter_if);
            smInsertFunctin(&symtable, name_if, NO, NULL, NO, 0, 0);
            root_symtable = symtable;
            checkInsertAndLoadToken(KEYWORD, "if");

            CHECK_AND_CALL_FUNCTION(expr());
            generate_if_head(stackTop(&expressionStack).attribute, counter_if);
            stackPop(&expressionStack);
            checkAndLoadKeyword(KEYWORD, "then");
            CHECK_AND_CALL_FUNCTION(stateListT24());

            generate_if_middle(counter_if);
            checkAndLoadKeyword(KEYWORD, "else");
            CHECK_AND_CALL_FUNCTION(stateList());

            generate_if_end(counter_if);
            smDeleteFunction(&symtable);
            root_symtable = symtable;
            // counter_if--;
            checkAndLoadKeyword(KEYWORD, "end");
            return OK;
            break;
        }
        else if (strcmp(token.attribute, "while") == 0) // Rule: <state> ->  while <expression> do <state_list> end
        {
            symtable = root_symtable;
            counter_while++;
            char name_while[9];
            sprintf(name_while, "while%d", counter_while);
            smInsertFunctin(&symtable, name_while, NO, NULL, NO, 0, 0);
            root_symtable = symtable;
            checkInsertAndLoadToken(KEYWORD, "while");

            CHECK_AND_CALL_FUNCTION(expr());
            generate_while_head(stackTop(&expressionStack).attribute, counter_while);
            generate_while_label_cycle(counter_while);
            checkAndLoadKeyword(KEYWORD, "do");
            CHECK_AND_CALL_FUNCTION(stateList());

            generate_while_iterate(stackTop(&expressionStack).attribute, counter_while);
            generate_while_label_end(counter_while);
            smDeleteFunction(&symtable);
            root_symtable = symtable;
            checkAndLoadKeyword(KEYWORD, "end");
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int stateT35()
{
    switch (token.type)
    {
    case IDENTIFICATOR: // Rule: <state> ->  id <after_id>
        clipboard[0] = token;
        checkAndLoadToken(IDENTIFICATOR);
        CHECK_AND_CALL_FUNCTION(afterIDT45());
        expressionStack = stackReverse(&expressionStack);
        if (strcmp(clipboard[0].attribute, "write") == 0)
        {
            for (int i = 0; expressionStack.head.attribute != NULL; i++)
            {
                generate_write("LF@", expressionStack.head.attribute);
                stackPop(&expressionStack);
            }
        }
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "local") == 0) // Rule: <state>  ->  local id : <types> <is_assign>
        {
            checkAndLoadKeyword(KEYWORD, "local");
            checkAndLoadToken(IDENTIFICATOR);
            checkAndLoadToken(COLON);
            CHECK_AND_CALL_FUNCTION(typesT43());
            CHECK_AND_CALL_FUNCTION(isAssignT44());
            return OK;
            break;
        }
        else if (strcmp(token.attribute, "if") == 0) // Rule: <state> ->  if <expression> then <state_list> <after_if>
        {
            symtable = root_symtable;
            counter_if++;
            char name_if[6];
            sprintf(name_if, "if%i", counter_if);
            smInsertFunctin(&symtable, name_if, NO, NULL, NO, 0, 0);
            root_symtable = symtable;
            checkInsertAndLoadToken(KEYWORD, "if");

            CHECK_AND_CALL_FUNCTION(expr());
            generate_if_head(stackTop(&expressionStack).attribute, counter_if);
            stackPop(&expressionStack);
            checkAndLoadKeyword(KEYWORD, "then");
            CHECK_AND_CALL_FUNCTION(stateListT24());

            generate_if_middle(counter_if);
            checkAndLoadKeyword(KEYWORD, "else");
            CHECK_AND_CALL_FUNCTION(stateList());

            generate_if_end(counter_if);
            smDeleteFunction(&symtable);
            root_symtable = symtable;
            // counter_if--;
            checkAndLoadKeyword(KEYWORD, "end");
            return OK;
            break;
            // checkInsertAndLoadToken(KEYWORD, "if");
            // CHECK_AND_CALL_FUNCTION(expr());
            // checkAndLoadKeyword(KEYWORD, "then");
            // CHECK_AND_CALL_FUNCTION(stateListT24());
            // checkAndLoadKeyword(KEYWORD, "else");
            // CHECK_AND_CALL_FUNCTION(stateList());
            // checkAndLoadKeyword(KEYWORD, "end");
            // return OK;
            // break;
        }
        else if (strcmp(token.attribute, "while") == 0) // Rule: <state> ->  while <expression> do <state_list> end
        {
            checkInsertAndLoadToken(KEYWORD, "while");
            CHECK_AND_CALL_FUNCTION(expr());
            checkAndLoadKeyword(KEYWORD, "do");
            CHECK_AND_CALL_FUNCTION(stateList());
            checkAndLoadKeyword(KEYWORD, "end");
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int returnState()
{
    switch (token.type)
    {
    case IDENTIFICATOR: // Rule: <return> ->  id <ret_type>
        checkAndLoadToken(IDENTIFICATOR);
        if (token.type == COMMA || token.type == LBR || strcmp(token.attribute, "end") == 0)
        {
            CHECK_AND_CALL_FUNCTION(retType());
        }
        else
        { // Rule: <return> ->  <expression>
            CHECK_AND_CALL_FUNCTION(expr());
        }
        return OK;
        break;
    case INT:
    case DOUBLE:
    case DOUB_DOT1:
    case DOUB_DOT2:
    case DOUB_EXP1:
    case DOUB_EXP2:
        CHECK_AND_CALL_FUNCTION(expr());
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "end") == 0) // Rule: <return>  ->  eps
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}
int returnStateT36()
{
    switch (token.type)
    {
    case IDENTIFICATOR: // Rule: <return> ->  id <ret_type>
        checkAndLoadToken(IDENTIFICATOR);
        if (token.type == COMMA || token.type == LBR || strcmp(token.attribute, "else") == 0)
        {
            CHECK_AND_CALL_FUNCTION(retTypeT46());
        }
        else
        { // Rule: <return> ->  <expression>
            CHECK_AND_CALL_FUNCTION(expr());
            CHECK_AND_CALL_FUNCTION(exprNT48());
        }
        return OK;
        break;
    case INT:
    case DOUBLE:
    case DOUB_DOT1:
    case DOUB_DOT2:
    case DOUB_EXP1:
    case DOUB_EXP2:
        CHECK_AND_CALL_FUNCTION(expr());
        CHECK_AND_CALL_FUNCTION(exprNT48());
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "else") == 0) // Rule: <return>  ->  eps
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int isAssign()
{
    switch (token.type)
    {
    case IDENTIFICATOR: // Rule: <is_assign> ->  eps

        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "while") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "end") == 0) // Rule: <return>  ->  eps
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case ASSIGN: // Rule: <is_assign> ->  = <declr>
        checkAndLoadToken(ASSIGN);
        if (token.type == IDENTIFICATOR)
        {
            CHECK_AND_CALL_FUNCTION(check_dec(token.attribute, 1));
        }
        else if (token.type == DOUBLE)
        {
            // LOL
        }
        else
            CHECK_AND_CALL_FUNCTION(check_type());

        smInsertVariable(&symtable, clipboard[1].attribute, token.attribute, symtable->type[0], change_type(clipboard[0].attribute));
        // stackPop(&tmp);
        CHECK_AND_CALL_FUNCTION(declr());

        // checkAndLoadToken(ASSIGN);
        // clipboard[0] = clipboard[1];
        // generate_declaration("LF@", clipboard[0].attribute);
        // CHECK_AND_CALL_FUNCTION(exprFunc());

        // if (token.type == IDENTIFICATOR && strcmp(token.attribute, "write") != 0)
        // {
        //     CHECK_AND_CALL_FUNCTION(check_dec(token.attribute, 1));
        // }
        // else if (token.type == DOUBLE)
        // {
        //     //LOL
        // }
        // // else
        // //     CHECK_AND_CALL_FUNCTION(check_type());

        // smInsertVariable(&symtable, symtable->name, expressionStack.head.attribute, symtable->type[0], symtable->scope);
        // stackPop(&expressionStack);
        // // CHECK_AND_CALL_FUNCTION(declr());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int isAssignT44()
{
    switch (token.type)
    {
    case IDENTIFICATOR: // Rule: <is_assign> ->  eps
        return OK;
        break;
    case KEYWORD:
        if (strcmp(token.attribute, "while") == 0 || strcmp(token.attribute, "if") == 0 || strcmp(token.attribute, "local") == 0 || strcmp(token.attribute, "return") == 0 || strcmp(token.attribute, "else") == 0) // Rule: <return>  ->  eps
        {
            return OK;
            break;
        }
        else
        {
            return SYNTAX_ERROR;
            break;
        }
    case ASSIGN: // Rule: <is_assign> ->  = <declr>
        checkAndLoadToken(ASSIGN);
        CHECK_AND_CALL_FUNCTION(declr());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}
